Fix spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ p.content-font, h2.content-font {
 .preview-container {
   position: relative;
   width: 300px;
-  height: 240px;
+  height: 220px;
   background-color: rgba(10, 31, 63, 0.3);
   display: flex;
   align-items: center;
